# routes/auth.go
@@ -9,7 +9,9 @@ import (
 
 func AuthRoutes(router *gin.Engine, cfg *config.Config) {
 	authController := controllers.NewAuthController(cfg)
-	router.POST("/register", authController.Register)
-	router.POST("/login", authController.Login)
-	router.POST("/verify-email", authController.VerifyEmail)
+
+	v1 := router.Group("/api/v1")
+	v1.POST("/register", authController.Register)
+	v1.POST("/login", authController.Login)
+	v1.POST("/verify-email", authController.VerifyEmail)
 }
